bugfix trophy-panel overflow issue

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -103,6 +103,7 @@ main {
 		'table table table table table table panel panel panel';
 	--panel-text-shadow: 1px 1px 4px #FFF;
 	background: inherit;
+	box-sizing: border-box;
 }
 
 main.ranking, main.track, main.track-list, main.player-list {
